--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,39 +1,40 @@
-.App {
-  text-align: center;
+.app {
   display: flex;
-  background: linear-gradient(#e98a00, #f5aa2f); 
+  text-align: center;
+  background: linear-gradient(#e98a00, #f5aa2f);
 }
 
-.App-logo {
+.app-logo {
   height: 20vmin;
   pointer-events: none;
-}  
+}
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .app-logo {
+    animation: app-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
   color: white;
+  font-size: calc(10px + 2vmin);
+  background-color: #282c34;
 }
 
-.App-link {
+.app-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
